--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ nav ul {
 #container-book {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
-	gap: 30px;
+	justify-content: center;
+	gap: 250px;
 	margin: 50px 150px;
 	color: #323131;
 }
@@ -75,6 +75,10 @@ button {
 	cursor: pointer;
 }
 
+.in-cart {
+	background-color: #faa70b;
+}
+
 #container-filters {
 	display: flex;
 	flex-wrap: wrap;
@@ -88,4 +92,13 @@ select {
 	border-radius: 10px;
 	padding: 4px;
 	color: #635f5f;
+}
+
+.active {
+	font-size: 9px;
+	background-color: #c99f4f;
+	color: #ffffff;
+	padding: 5px;
+	border-radius: 50%;
+	margin-left: -10px;
 }
