--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,11 @@ nav ul {
 	color: #323131;
 }
 
-.item-book img {
+.item-box img {
 	height: 280px;
 }
 
-.item-book {
+.item-box {
 	text-align: center;
 }
 
