--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,17 @@ nav ul {
 	list-style-type: none;
 }
 
+.nav-mobile {
+	display: none;
+}
+
+/* HOME */
 #container-book {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	gap: 120px 300px;
 	margin: 50px 150px;
-	/* color: #323131; */
 	color: #635F5F;
 }
 
@@ -57,12 +61,12 @@ nav ul {
 	text-align: center;
 }
 
-#title {
+.title {
 	padding-top: 20px;
 	font-size: 18px;
 }
 
-#author {
+.author {
 	padding: 10px 0;
 }
 
@@ -104,6 +108,7 @@ select {
 	margin-left: -10px;
 }
 
+/* CART */
 #container-cart {
 	color: #635f5f;
 	margin: 45px 0;
@@ -118,9 +123,14 @@ select {
 	margin: 45px auto;
 }
 
+#container-cart input {
+	width: 50px;
+}
+
 #info-empty-cart {
 	display: none;
 	justify-content: center;
+	text-align: center;
 	width: 50%;
 	margin: 70px auto;
 	padding: 10px 20px;
@@ -144,8 +154,10 @@ th {
 }
 
 .btn-delete {
-	background-color: transparent;
-	color: #635f5f;
+	padding: 5px 10px;
+	background-color: #c99f4f;
+	color: #0a0a0a;
+	border: none;
 }
 
 .img-cart {
@@ -204,7 +216,7 @@ th {
 	color: #000000;
 }
 
-/* order */
+/* ORDER */
 .form {
 	display: flex;
 	flex-direction: column;
@@ -243,7 +255,7 @@ th {
 }
 
 .hidden {
-	visibility: hidden;
+	display: none;
 }
 
 .nip {
@@ -319,14 +331,14 @@ th {
 #order-summary p {
 	justify-content: center;
 	text-align: justify;
-	width: 30%;
+	width: 50%;
 	margin: 10 px 0;
 	font-size: 13px;
 }
 
 #order-summary hr {
 	margin: 30px 0;
-	width: 30%;
+	width: 50%;
 	color:#635F5F;
 }
 
@@ -334,13 +346,10 @@ th {
 	margin-top: 30px;
 }
 
-#buy-btn {
-	margin-bottom: 40px;
-}
-
 .buttons {
 	display: flex;
-	gap: 15px
+	gap: 15px;
+	margin-bottom: 40px;
 }
 
 .error-text {
@@ -351,4 +360,111 @@ th {
 
 .error {
 	border: 1px solid rgb(181, 31, 4);
+}
+
+@media (max-width: 1221px) {
+	#update-cart-btn {
+		margin: 0 auto;
+	}
+
+	.form {
+		width: 35%;
+	}
+}
+
+@media (max-width: 992px) {
+	.nav-desktop {
+		display: none;
+	}
+
+	.logo a {
+		font-size: 22px;
+	}
+
+	.nav-mobile {
+		display: block;
+	}
+
+	header {
+		padding: 20px 5px;
+	}
+
+	#container-cart table {
+		width: 75%;
+	}
+
+	#order-summary {
+		width: 90%;
+	}
+}
+
+@media (max-width: 768px) {
+	#container-book {
+		gap: 80px;
+	}
+
+	#container-cart table {
+		width: 90%;
+		margin-bottom: 0;
+	}
+	
+	#container-cart thead {
+		display: none;
+	}
+	
+	#container-cart tr {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 50px;
+	}
+	
+	#container-cart td {
+		border-bottom: none;
+		padding: 7px 0;
+	}
+	
+	#container-cart td:last-child {
+		padding-bottom: 25px;
+		border-bottom: 1px solid #858383;
+	}
+
+	#container-cart input {
+		width: 40px;
+	}
+
+	#container-cart h2 {
+		font-size: 20px;
+	}
+
+	.img-cart {
+		height: 200px;
+	}
+
+	#container-summary {
+		padding: 0 20px;
+	}
+
+	#order-btn {
+		margin-bottom: 70px;
+	}
+
+	.container-btn {
+		margin-bottom: 80px;
+	}
+
+	.form {
+		width: 90%;
+	}
+
+	#forms h3 {
+		text-align: center;
+	}
+
+	#order-summary {
+		width: 90%;
+	}
+
+	#order-summary p, #order-summary hr {
+		width: 80%;
+	}
 }
